--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,6 +4,7 @@
   <%= f.text_field :title %>
   <%= f.text_field :release_year %>
   <%= f.text_field :released %>
+  <%= f.text_field :genre %>
 
   <%= f.submit %>
 <% end %>
