--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,6 +5,7 @@
   <%= f.text_field :release_year %>
   <%= f.text_field :released %>
   <%= f.text_field :genre %>
+  <%= f.text_field :artist_name %>
 
   <%= f.submit %>
 <% end %>
