--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,8 +4,8 @@
   <%= f.text_field :title, @song.title %>
   <%= f.text_field :release_year, @song.release_year %>
   <%= f.text_field :released, @song.released %>
-  <%= f.text_field :genre %>
-  <%= f.text_field :artist_name %>
+  <%= f.text_field :genre, @song.genre %>
+  <%= f.text_field :artist_name, @song.artist_name %>
 
   <%= f.submit %>
 <% end %>
