--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_for @song do |f| %>
   <%= f.text_field :title %>
   <%= f.text_field :release_year %>
-  <%= f.text_field :released %>
+  <%= f.checkbox :released %>
   <%= f.text_field :genre %>
   <%= f.text_field :artist_name %>
 
