--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,3 +3,5 @@
 <p>Release Year: <%= @song.release_year %></p>
 <p>Artist Name: <%= @song.artist_name %></p>
 <p>Genre: <%= @song.genre %></p>
+
+<%= link_to "edit", edit_song_path(@song) %>
