Automatically backed up by Learn

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -4,4 +4,4 @@
 <p>Artist Name: <%= @song.artist_name %></p>
 <p>Genre: <%= @song.genre %></p>
 
-<%= link_to "edit", edit_song_path(@song) %>
+<%= button_to "edit", edit_song_path(@song) %>
