Automatically backed up by Learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,11 @@
 <table>
-
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Released</th>
+      <th>Release Year</th>
+      <th>Artist Name</th>
+      <th>Genre</th>
+    </tr>
+  </thead>
 </table>
