Automatically backed up by Learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -9,6 +9,14 @@
     </tr>
   </thead>
   <tbody>
-
+    <% @songs.each do |song| %>
+      <tr>
+        <td><%= song.title %></td>
+        <td><%= song.released %></td>
+        <td><%= song.release_year %></td>
+        <td><%= song.artist_name %></td>
+        <tf><%= song.genre %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
